--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/raleway": "^5.0.16",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^5.9.2",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-helmet": "^6.1.0",
+    "react-side-effect": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
