Update .env and package.json, add "Add Blogs" link to Appbar

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ GOOGLE_CLIENT_ID = "769500447210-iu1vnn1lhb30irpndvd9476n5vgkr9qr.apps.googleuse
 GOOGLE_CLIENT_SECRET = "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"
 NEXTAUTH_SECRET = devdevdev
 NEXTAUTH_URL = "http://localhost:3000"
+MONGODB_URI = "mongodb+srv://ojasaklechayt:eOXZYL8ishyGTTP6@cluster0.bav1lpr.mongodb.net/?retryWrites=true&w=majority"
