--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@fontsource/raleway": "^5.0.16",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "mongodb": "^5.9.2",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-side-effect": "^2.1.2"
+    "react-hot-toast": "^2.4.1",
+    "react-side-effect": "^2.1.2",
+    "react-toast-notifications": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
