--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fontsource/raleway": "^5.0.16",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.16.16",
     "mongodb": "^5.9.2",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
