--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.16.16",
+    "fslightbox-react": "^1.7.6",
     "mongodb": "^5.9.2",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
@@ -22,7 +23,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-side-effect": "^2.1.2"
+    "react-responsive-carousel": "^3.2.23",
+    "react-side-effect": "^2.1.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
